--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf2a-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf2a-catalog.yml
@@ -58,42 +58,42 @@ anta.tests.connectivity:
       neighbor_port: Ethernet3
       port: Ethernet3
     result_overwrite:
-      custom_field: 'Local: Ethernet3 - Remote: dc2-leaf2b_Ethernet3'
+      custom_field: 'Local: Ethernet3 - Remote: dc2-leaf2b Ethernet3'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf2b
       neighbor_port: Ethernet4
       port: Ethernet4
     result_overwrite:
-      custom_field: 'Local: Ethernet4 - Remote: dc2-leaf2b_Ethernet4'
+      custom_field: 'Local: Ethernet4 - Remote: dc2-leaf2b Ethernet4'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-spine1
       neighbor_port: Ethernet3
       port: Ethernet1
     result_overwrite:
-      custom_field: 'Local: Ethernet1 - Remote: dc2-spine1_Ethernet3'
+      custom_field: 'Local: Ethernet1 - Remote: dc2-spine1 Ethernet3'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-spine2
       neighbor_port: Ethernet3
       port: Ethernet2
     result_overwrite:
-      custom_field: 'Local: Ethernet2 - Remote: dc2-spine2_Ethernet3'
+      custom_field: 'Local: Ethernet2 - Remote: dc2-spine2 Ethernet3'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf2c
       neighbor_port: Ethernet1
       port: Ethernet8
     result_overwrite:
-      custom_field: 'Local: Ethernet8 - Remote: dc2-leaf2c_Ethernet1'
+      custom_field: 'Local: Ethernet8 - Remote: dc2-leaf2c Ethernet1'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc1-leaf2a.dc1.local
       neighbor_port: Ethernet6
       port: Ethernet6
     result_overwrite:
-      custom_field: 'Local: Ethernet6 - Remote: dc1-leaf2a_Ethernet6'
+      custom_field: 'Local: Ethernet6 - Remote: dc1-leaf2a Ethernet6'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.112
@@ -101,7 +101,8 @@ anta.tests.connectivity:
       source: 10.255.255.113
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet1 - Destination: dc2-spine1_Ethernet3'
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.113) - Destination:
+        dc2-spine1 Ethernet3 (IP: 10.255.255.112)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.114
@@ -109,7 +110,8 @@ anta.tests.connectivity:
       source: 10.255.255.115
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet2 - Destination: dc2-spine2_Ethernet3'
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.115) - Destination:
+        dc2-spine2 Ethernet3 (IP: 10.255.255.114)'
 - VerifyReachability:
     hosts:
     - destination: 192.168.100.0
@@ -117,7 +119,8 @@ anta.tests.connectivity:
       source: 192.168.100.1
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet6 - Destination: dc1-leaf2a_Ethernet6'
+      custom_field: 'Source: P2P Interface Ethernet6 (IP: 192.168.100.1) - Destination:
+        dc1-leaf2a Ethernet6 (IP: 192.168.100.0)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.1
@@ -125,7 +128,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc1-spine1_10.255.0.1'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc1-spine1
+        Loopback0 (IP: 10.255.0.1)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.2
@@ -133,7 +137,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc1-spine2_10.255.0.2'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc1-spine2
+        Loopback0 (IP: 10.255.0.2)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.3
@@ -141,7 +146,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc1-leaf1a_10.255.0.3'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc1-leaf1a
+        Loopback0 (IP: 10.255.0.3)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.4
@@ -149,7 +155,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc1-leaf1b_10.255.0.4'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc1-leaf1b
+        Loopback0 (IP: 10.255.0.4)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.5
@@ -157,7 +164,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc1-leaf2a_10.255.0.5'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc1-leaf2a
+        Loopback0 (IP: 10.255.0.5)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.2.1
@@ -165,7 +173,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc1-wan1_10.255.2.1'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc1-wan1
+        Loopback0 (IP: 10.255.2.1)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.2.2
@@ -173,7 +182,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc1-wan2_10.255.2.2'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc1-wan2
+        Loopback0 (IP: 10.255.2.2)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.11
@@ -181,7 +191,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc2-spine1_10.255.128.11'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc2-spine1
+        Loopback0 (IP: 10.255.128.11)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.12
@@ -189,7 +200,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc2-spine2_10.255.128.12'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc2-spine2
+        Loopback0 (IP: 10.255.128.12)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.13
@@ -197,7 +209,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc2-leaf1a_10.255.128.13'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc2-leaf1a
+        Loopback0 (IP: 10.255.128.13)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.14
@@ -205,7 +218,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc2-leaf1b_10.255.128.14'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc2-leaf1b
+        Loopback0 (IP: 10.255.128.14)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.15
@@ -213,7 +227,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc2-leaf2a_10.255.128.15'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc2-leaf2a
+        Loopback0 (IP: 10.255.128.15)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.16
@@ -221,7 +236,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc2-leaf2b_10.255.128.16'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc2-leaf2b
+        Loopback0 (IP: 10.255.128.16)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.17
@@ -229,7 +245,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc2-leaf3a.arista.com_10.255.128.17'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc2-leaf3a.arista.com
+        Loopback0 (IP: 10.255.128.17)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.18
@@ -237,7 +254,8 @@ anta.tests.connectivity:
       source: 10.255.128.15
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.15 - Destination: dc2-leaf3b.arista.com_10.255.128.18'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.15) - Destination: dc2-leaf3b.arista.com
+        Loopback0 (IP: 10.255.128.18)'
 anta.tests.field_notices:
 - VerifyFieldNotice44Resolution: null
 - VerifyFieldNotice72Resolution: null
@@ -458,21 +476,21 @@ anta.tests.routing.bgp:
       peers:
       - 10.255.128.11
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc2-spine1_10.255.128.11'
+      custom_field: 'BGP EVPN Peer: dc2-spine1 (IP: 10.255.128.11)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.12
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc2-spine2_10.255.128.12'
+      custom_field: 'BGP EVPN Peer: dc2-spine2 (IP: 10.255.128.12)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.0.5
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc1-leaf2a_10.255.0.5'
+      custom_field: 'BGP EVPN Peer: dc1-leaf2a (IP: 10.255.0.5)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -480,7 +498,7 @@ anta.tests.routing.bgp:
       - 10.255.129.121
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf2b_10.255.129.121'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf2b (IP: 10.255.129.121)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -488,7 +506,7 @@ anta.tests.routing.bgp:
       - 10.255.255.112
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-spine1_10.255.255.112'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-spine1 (IP: 10.255.255.112)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -496,7 +514,7 @@ anta.tests.routing.bgp:
       - 10.255.255.114
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-spine2_10.255.255.114'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-spine2 (IP: 10.255.255.114)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -504,7 +522,7 @@ anta.tests.routing.bgp:
       - 192.168.100.0
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf2a_192.168.100.0'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf2a (IP: 192.168.100.0)'
 anta.tests.routing.generic:
 - VerifyRoutingProtocolModel:
     model: multi-agent
