--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-spine2-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-spine2-catalog.yml
@@ -58,42 +58,42 @@ anta.tests.connectivity:
       neighbor_port: Ethernet2
       port: Ethernet1
     result_overwrite:
-      custom_field: 'Local: Ethernet1 - Remote: dc2-leaf1a_Ethernet2'
+      custom_field: 'Local: Ethernet1 - Remote: dc2-leaf1a Ethernet2'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf1b
       neighbor_port: Ethernet2
       port: Ethernet2
     result_overwrite:
-      custom_field: 'Local: Ethernet2 - Remote: dc2-leaf1b_Ethernet2'
+      custom_field: 'Local: Ethernet2 - Remote: dc2-leaf1b Ethernet2'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf2a
       neighbor_port: Ethernet2
       port: Ethernet3
     result_overwrite:
-      custom_field: 'Local: Ethernet3 - Remote: dc2-leaf2a_Ethernet2'
+      custom_field: 'Local: Ethernet3 - Remote: dc2-leaf2a Ethernet2'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf2b
       neighbor_port: Ethernet2
       port: Ethernet4
     result_overwrite:
-      custom_field: 'Local: Ethernet4 - Remote: dc2-leaf2b_Ethernet2'
+      custom_field: 'Local: Ethernet4 - Remote: dc2-leaf2b Ethernet2'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf3a.arista.com
       neighbor_port: Ethernet2
       port: Ethernet5
     result_overwrite:
-      custom_field: 'Local: Ethernet5 - Remote: dc2-leaf3a.arista.com_Ethernet2'
+      custom_field: 'Local: Ethernet5 - Remote: dc2-leaf3a.arista.com Ethernet2'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf3b.arista.com
       neighbor_port: Ethernet2
       port: Ethernet6
     result_overwrite:
-      custom_field: 'Local: Ethernet6 - Remote: dc2-leaf3b.arista.com_Ethernet2'
+      custom_field: 'Local: Ethernet6 - Remote: dc2-leaf3b.arista.com Ethernet2'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.107
@@ -101,7 +101,8 @@ anta.tests.connectivity:
       source: 10.255.255.106
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet1 - Destination: dc2-leaf1a_Ethernet2'
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.106) - Destination:
+        dc2-leaf1a Ethernet2 (IP: 10.255.255.107)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.111
@@ -109,7 +110,8 @@ anta.tests.connectivity:
       source: 10.255.255.110
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet2 - Destination: dc2-leaf1b_Ethernet2'
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.110) - Destination:
+        dc2-leaf1b Ethernet2 (IP: 10.255.255.111)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.115
@@ -117,7 +119,8 @@ anta.tests.connectivity:
       source: 10.255.255.114
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet3 - Destination: dc2-leaf2a_Ethernet2'
+      custom_field: 'Source: P2P Interface Ethernet3 (IP: 10.255.255.114) - Destination:
+        dc2-leaf2a Ethernet2 (IP: 10.255.255.115)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.119
@@ -125,7 +128,8 @@ anta.tests.connectivity:
       source: 10.255.255.118
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet4 - Destination: dc2-leaf2b_Ethernet2'
+      custom_field: 'Source: P2P Interface Ethernet4 (IP: 10.255.255.118) - Destination:
+        dc2-leaf2b Ethernet2 (IP: 10.255.255.119)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.123
@@ -133,7 +137,8 @@ anta.tests.connectivity:
       source: 10.255.255.122
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet5 - Destination: dc2-leaf3a.arista.com_Ethernet2'
+      custom_field: 'Source: P2P Interface Ethernet5 (IP: 10.255.255.122) - Destination:
+        dc2-leaf3a.arista.com Ethernet2 (IP: 10.255.255.123)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.127
@@ -141,7 +146,8 @@ anta.tests.connectivity:
       source: 10.255.255.126
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet6 - Destination: dc2-leaf3b.arista.com_Ethernet2'
+      custom_field: 'Source: P2P Interface Ethernet6 (IP: 10.255.255.126) - Destination:
+        dc2-leaf3b.arista.com Ethernet2 (IP: 10.255.255.127)'
 anta.tests.field_notices:
 - VerifyFieldNotice44Resolution: null
 - VerifyFieldNotice72Resolution: null
@@ -232,42 +238,42 @@ anta.tests.routing.bgp:
       peers:
       - 10.255.128.13
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc2-leaf1a_10.255.128.13'
+      custom_field: 'BGP EVPN Peer: dc2-leaf1a (IP: 10.255.128.13)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.14
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc2-leaf1b_10.255.128.14'
+      custom_field: 'BGP EVPN Peer: dc2-leaf1b (IP: 10.255.128.14)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.15
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc2-leaf2a_10.255.128.15'
+      custom_field: 'BGP EVPN Peer: dc2-leaf2a (IP: 10.255.128.15)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.16
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc2-leaf2b_10.255.128.16'
+      custom_field: 'BGP EVPN Peer: dc2-leaf2b (IP: 10.255.128.16)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.17
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc2-leaf3a.arista.com_10.255.128.17'
+      custom_field: 'BGP EVPN Peer: dc2-leaf3a.arista.com (IP: 10.255.128.17)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.18
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc2-leaf3b.arista.com_10.255.128.18'
+      custom_field: 'BGP EVPN Peer: dc2-leaf3b.arista.com (IP: 10.255.128.18)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -275,7 +281,7 @@ anta.tests.routing.bgp:
       - 10.255.255.107
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf1a_10.255.255.107'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf1a (IP: 10.255.255.107)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -283,7 +289,7 @@ anta.tests.routing.bgp:
       - 10.255.255.111
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf1b_10.255.255.111'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf1b (IP: 10.255.255.111)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -291,7 +297,7 @@ anta.tests.routing.bgp:
       - 10.255.255.115
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf2a_10.255.255.115'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf2a (IP: 10.255.255.115)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -299,7 +305,7 @@ anta.tests.routing.bgp:
       - 10.255.255.119
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf2b_10.255.255.119'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf2b (IP: 10.255.255.119)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -307,7 +313,7 @@ anta.tests.routing.bgp:
       - 10.255.255.123
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf3a.arista.com_10.255.255.123'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf3a.arista.com (IP: 10.255.255.123)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -315,7 +321,7 @@ anta.tests.routing.bgp:
       - 10.255.255.127
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf3b.arista.com_10.255.255.127'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf3b.arista.com (IP: 10.255.255.127)'
 anta.tests.routing.generic:
 - VerifyRoutingProtocolModel:
     model: multi-agent
