--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf1b-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf1b-catalog.yml
@@ -58,49 +58,49 @@ anta.tests.connectivity:
       neighbor_port: Ethernet3
       port: Ethernet3
     result_overwrite:
-      custom_field: 'Local: Ethernet3 - Remote: dc1-leaf1a_Ethernet3'
+      custom_field: 'Local: Ethernet3 - Remote: dc1-leaf1a Ethernet3'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc1-leaf1a.dc1.local
       neighbor_port: Ethernet4
       port: Ethernet4
     result_overwrite:
-      custom_field: 'Local: Ethernet4 - Remote: dc1-leaf1a_Ethernet4'
+      custom_field: 'Local: Ethernet4 - Remote: dc1-leaf1a Ethernet4'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc1-spine1.dc1.local
       neighbor_port: Ethernet2
       port: Ethernet1
     result_overwrite:
-      custom_field: 'Local: Ethernet1 - Remote: dc1-spine1_Ethernet2'
+      custom_field: 'Local: Ethernet1 - Remote: dc1-spine1 Ethernet2'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc1-spine2.dc1.local
       neighbor_port: Ethernet2
       port: Ethernet2
     result_overwrite:
-      custom_field: 'Local: Ethernet2 - Remote: dc1-spine2_Ethernet2'
+      custom_field: 'Local: Ethernet2 - Remote: dc1-spine2 Ethernet2'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc1-wan1.dc1.local
       neighbor_port: Ethernet2
       port: Ethernet6
     result_overwrite:
-      custom_field: 'Local: Ethernet6 - Remote: dc1-wan1_Ethernet2'
+      custom_field: 'Local: Ethernet6 - Remote: dc1-wan1 Ethernet2'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc1-wan2.dc1.local
       neighbor_port: Ethernet2
       port: Ethernet7
     result_overwrite:
-      custom_field: 'Local: Ethernet7 - Remote: dc1-wan2_Ethernet2'
+      custom_field: 'Local: Ethernet7 - Remote: dc1-wan2 Ethernet2'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc1-leaf1c.dc1.local
       neighbor_port: Ethernet2
       port: Ethernet8
     result_overwrite:
-      custom_field: 'Local: Ethernet8 - Remote: dc1-leaf1c_Ethernet2'
+      custom_field: 'Local: Ethernet8 - Remote: dc1-leaf1c Ethernet2'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.4
@@ -108,7 +108,8 @@ anta.tests.connectivity:
       source: 10.255.255.5
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet1 - Destination: dc1-spine1_Ethernet2'
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.5) - Destination:
+        dc1-spine1 Ethernet2 (IP: 10.255.255.4)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.6
@@ -116,7 +117,8 @@ anta.tests.connectivity:
       source: 10.255.255.7
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet2 - Destination: dc1-spine2_Ethernet2'
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.7) - Destination:
+        dc1-spine2 Ethernet2 (IP: 10.255.255.6)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.3
@@ -124,7 +126,8 @@ anta.tests.connectivity:
       source: 10.255.255.2
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet6 - Destination: dc1-wan1_Ethernet2'
+      custom_field: 'Source: P2P Interface Ethernet6 (IP: 10.255.255.2) - Destination:
+        dc1-wan1 Ethernet2 (IP: 10.255.255.3)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.7
@@ -132,7 +135,8 @@ anta.tests.connectivity:
       source: 10.255.255.6
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet7 - Destination: dc1-wan2_Ethernet2'
+      custom_field: 'Source: P2P Interface Ethernet7 (IP: 10.255.255.6) - Destination:
+        dc1-wan2 Ethernet2 (IP: 10.255.255.7)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.1
@@ -140,7 +144,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc1-spine1_10.255.0.1'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc1-spine1
+        Loopback0 (IP: 10.255.0.1)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.2
@@ -148,7 +153,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc1-spine2_10.255.0.2'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc1-spine2
+        Loopback0 (IP: 10.255.0.2)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.3
@@ -156,7 +162,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc1-leaf1a_10.255.0.3'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc1-leaf1a
+        Loopback0 (IP: 10.255.0.3)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.4
@@ -164,7 +171,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc1-leaf1b_10.255.0.4'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc1-leaf1b
+        Loopback0 (IP: 10.255.0.4)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.5
@@ -172,7 +180,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc1-leaf2a_10.255.0.5'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc1-leaf2a
+        Loopback0 (IP: 10.255.0.5)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.2.1
@@ -180,7 +189,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc1-wan1_10.255.2.1'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc1-wan1 Loopback0
+        (IP: 10.255.2.1)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.2.2
@@ -188,7 +198,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc1-wan2_10.255.2.2'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc1-wan2 Loopback0
+        (IP: 10.255.2.2)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.11
@@ -196,7 +207,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc2-spine1_10.255.128.11'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc2-spine1
+        Loopback0 (IP: 10.255.128.11)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.12
@@ -204,7 +216,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc2-spine2_10.255.128.12'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc2-spine2
+        Loopback0 (IP: 10.255.128.12)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.13
@@ -212,7 +225,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc2-leaf1a_10.255.128.13'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc2-leaf1a
+        Loopback0 (IP: 10.255.128.13)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.14
@@ -220,7 +234,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc2-leaf1b_10.255.128.14'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc2-leaf1b
+        Loopback0 (IP: 10.255.128.14)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.15
@@ -228,7 +243,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc2-leaf2a_10.255.128.15'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc2-leaf2a
+        Loopback0 (IP: 10.255.128.15)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.16
@@ -236,7 +252,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc2-leaf2b_10.255.128.16'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc2-leaf2b
+        Loopback0 (IP: 10.255.128.16)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.17
@@ -244,7 +261,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc2-leaf3a.arista.com_10.255.128.17'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc2-leaf3a.arista.com
+        Loopback0 (IP: 10.255.128.17)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.18
@@ -252,7 +270,8 @@ anta.tests.connectivity:
       source: 10.255.0.4
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.0.4 - Destination: dc2-leaf3b.arista.com_10.255.128.18'
+      custom_field: 'Source: Loopback0 (IP: 10.255.0.4) - Destination: dc2-leaf3b.arista.com
+        Loopback0 (IP: 10.255.128.18)'
 anta.tests.field_notices:
 - VerifyFieldNotice44Resolution: null
 - VerifyFieldNotice72Resolution: null
@@ -452,14 +471,14 @@ anta.tests.routing.bgp:
       peers:
       - 10.255.0.1
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc1-spine1_10.255.0.1'
+      custom_field: 'BGP EVPN Peer: dc1-spine1 (IP: 10.255.0.1)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.0.2
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc1-spine2_10.255.0.2'
+      custom_field: 'BGP EVPN Peer: dc1-spine2 (IP: 10.255.0.2)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -467,7 +486,7 @@ anta.tests.routing.bgp:
       - 10.255.1.96
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf1a_10.255.1.96'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf1a (IP: 10.255.1.96)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -475,7 +494,7 @@ anta.tests.routing.bgp:
       - 10.255.255.4
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc1-spine1_10.255.255.4'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-spine1 (IP: 10.255.255.4)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -483,7 +502,7 @@ anta.tests.routing.bgp:
       - 10.255.255.6
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc1-spine2_10.255.255.6'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-spine2 (IP: 10.255.255.6)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -491,7 +510,7 @@ anta.tests.routing.bgp:
       - 10.255.255.3
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc1-wan1_10.255.255.3'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-wan1 (IP: 10.255.255.3)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -499,7 +518,7 @@ anta.tests.routing.bgp:
       - 10.255.255.7
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc1-wan2_10.255.255.7'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-wan2 (IP: 10.255.255.7)'
 anta.tests.routing.generic:
 - VerifyRoutingProtocolModel:
     model: multi-agent
