--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan1-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan1-catalog.yml
@@ -58,14 +58,14 @@ anta.tests.connectivity:
       neighbor_port: Ethernet6
       port: Ethernet1
     result_overwrite:
-      custom_field: 'Local: Ethernet1 - Remote: dc1-leaf1a_Ethernet6'
+      custom_field: 'Local: Ethernet1 - Remote: dc1-leaf1a Ethernet6'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc1-leaf1b.dc1.local
       neighbor_port: Ethernet6
       port: Ethernet2
     result_overwrite:
-      custom_field: 'Local: Ethernet2 - Remote: dc1-leaf1b_Ethernet6'
+      custom_field: 'Local: Ethernet2 - Remote: dc1-leaf1b Ethernet6'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.0
@@ -73,7 +73,8 @@ anta.tests.connectivity:
       source: 10.255.255.1
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet1 - Destination: dc1-leaf1a_Ethernet6'
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.1) - Destination:
+        dc1-leaf1a Ethernet6 (IP: 10.255.255.0)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.2
@@ -81,7 +82,8 @@ anta.tests.connectivity:
       source: 10.255.255.3
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet2 - Destination: dc1-leaf1b_Ethernet6'
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.3) - Destination:
+        dc1-leaf1b Ethernet6 (IP: 10.255.255.2)'
 anta.tests.field_notices:
 - VerifyFieldNotice44Resolution: null
 - VerifyFieldNotice72Resolution: null
@@ -171,7 +173,7 @@ anta.tests.routing.bgp:
       - 10.255.255.0
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf1a_10.255.255.0'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf1a (IP: 10.255.255.0)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -179,7 +181,7 @@ anta.tests.routing.bgp:
       - 10.255.255.2
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf1b_10.255.255.2'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf1b (IP: 10.255.255.2)'
 anta.tests.routing.generic:
 - VerifyRoutingProtocolModel:
     model: multi-agent
