--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan2-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan2-catalog.yml
@@ -58,14 +58,14 @@ anta.tests.connectivity:
       neighbor_port: Ethernet7
       port: Ethernet1
     result_overwrite:
-      custom_field: 'Local: Ethernet1 - Remote: dc1-leaf1a_Ethernet7'
+      custom_field: 'Local: Ethernet1 - Remote: dc1-leaf1a Ethernet7'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc1-leaf1b.dc1.local
       neighbor_port: Ethernet7
       port: Ethernet2
     result_overwrite:
-      custom_field: 'Local: Ethernet2 - Remote: dc1-leaf1b_Ethernet7'
+      custom_field: 'Local: Ethernet2 - Remote: dc1-leaf1b Ethernet7'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.4
@@ -73,7 +73,8 @@ anta.tests.connectivity:
       source: 10.255.255.5
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet1 - Destination: dc1-leaf1a_Ethernet7'
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.5) - Destination:
+        dc1-leaf1a Ethernet7 (IP: 10.255.255.4)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.6
@@ -81,7 +82,8 @@ anta.tests.connectivity:
       source: 10.255.255.7
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet2 - Destination: dc1-leaf1b_Ethernet7'
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.7) - Destination:
+        dc1-leaf1b Ethernet7 (IP: 10.255.255.6)'
 anta.tests.field_notices:
 - VerifyFieldNotice44Resolution: null
 - VerifyFieldNotice72Resolution: null
@@ -171,7 +173,7 @@ anta.tests.routing.bgp:
       - 10.255.255.4
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf1a_10.255.255.4'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf1a (IP: 10.255.255.4)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -179,7 +181,7 @@ anta.tests.routing.bgp:
       - 10.255.255.6
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf1b_10.255.255.6'
+      custom_field: 'BGP IPv4 Unicast Peer: dc1-leaf1b (IP: 10.255.255.6)'
 anta.tests.routing.generic:
 - VerifyRoutingProtocolModel:
     model: multi-agent
