--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf1c-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf1c-catalog.yml
@@ -58,14 +58,14 @@ anta.tests.connectivity:
       neighbor_port: Ethernet8
       port: Ethernet1
     result_overwrite:
-      custom_field: 'Local: Ethernet1 - Remote: dc2-leaf1a_Ethernet8'
+      custom_field: 'Local: Ethernet1 - Remote: dc2-leaf1a Ethernet8'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf1b
       neighbor_port: Ethernet8
       port: Ethernet2
     result_overwrite:
-      custom_field: 'Local: Ethernet2 - Remote: dc2-leaf1b_Ethernet8'
+      custom_field: 'Local: Ethernet2 - Remote: dc2-leaf1b Ethernet8'
 anta.tests.field_notices:
 - VerifyFieldNotice44Resolution: null
 - VerifyFieldNotice72Resolution: null
