--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf2b-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf2b-catalog.yml
@@ -58,35 +58,35 @@ anta.tests.connectivity:
       neighbor_port: Ethernet3
       port: Ethernet3
     result_overwrite:
-      custom_field: 'Local: Ethernet3 - Remote: dc2-leaf2a_Ethernet3'
+      custom_field: 'Local: Ethernet3 - Remote: dc2-leaf2a Ethernet3'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf2a
       neighbor_port: Ethernet4
       port: Ethernet4
     result_overwrite:
-      custom_field: 'Local: Ethernet4 - Remote: dc2-leaf2a_Ethernet4'
+      custom_field: 'Local: Ethernet4 - Remote: dc2-leaf2a Ethernet4'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-spine1
       neighbor_port: Ethernet4
       port: Ethernet1
     result_overwrite:
-      custom_field: 'Local: Ethernet1 - Remote: dc2-spine1_Ethernet4'
+      custom_field: 'Local: Ethernet1 - Remote: dc2-spine1 Ethernet4'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-spine2
       neighbor_port: Ethernet4
       port: Ethernet2
     result_overwrite:
-      custom_field: 'Local: Ethernet2 - Remote: dc2-spine2_Ethernet4'
+      custom_field: 'Local: Ethernet2 - Remote: dc2-spine2 Ethernet4'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf2c
       neighbor_port: Ethernet2
       port: Ethernet8
     result_overwrite:
-      custom_field: 'Local: Ethernet8 - Remote: dc2-leaf2c_Ethernet2'
+      custom_field: 'Local: Ethernet8 - Remote: dc2-leaf2c Ethernet2'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.116
@@ -94,7 +94,8 @@ anta.tests.connectivity:
       source: 10.255.255.117
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet1 - Destination: dc2-spine1_Ethernet4'
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.117) - Destination:
+        dc2-spine1 Ethernet4 (IP: 10.255.255.116)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.118
@@ -102,7 +103,8 @@ anta.tests.connectivity:
       source: 10.255.255.119
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet2 - Destination: dc2-spine2_Ethernet4'
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.119) - Destination:
+        dc2-spine2 Ethernet4 (IP: 10.255.255.118)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.1
@@ -110,7 +112,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc1-spine1_10.255.0.1'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc1-spine1
+        Loopback0 (IP: 10.255.0.1)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.2
@@ -118,7 +121,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc1-spine2_10.255.0.2'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc1-spine2
+        Loopback0 (IP: 10.255.0.2)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.3
@@ -126,7 +130,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc1-leaf1a_10.255.0.3'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc1-leaf1a
+        Loopback0 (IP: 10.255.0.3)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.4
@@ -134,7 +139,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc1-leaf1b_10.255.0.4'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc1-leaf1b
+        Loopback0 (IP: 10.255.0.4)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.5
@@ -142,7 +148,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc1-leaf2a_10.255.0.5'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc1-leaf2a
+        Loopback0 (IP: 10.255.0.5)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.2.1
@@ -150,7 +157,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc1-wan1_10.255.2.1'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc1-wan1
+        Loopback0 (IP: 10.255.2.1)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.2.2
@@ -158,7 +166,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc1-wan2_10.255.2.2'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc1-wan2
+        Loopback0 (IP: 10.255.2.2)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.11
@@ -166,7 +175,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc2-spine1_10.255.128.11'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc2-spine1
+        Loopback0 (IP: 10.255.128.11)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.12
@@ -174,7 +184,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc2-spine2_10.255.128.12'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc2-spine2
+        Loopback0 (IP: 10.255.128.12)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.13
@@ -182,7 +193,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc2-leaf1a_10.255.128.13'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc2-leaf1a
+        Loopback0 (IP: 10.255.128.13)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.14
@@ -190,7 +202,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc2-leaf1b_10.255.128.14'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc2-leaf1b
+        Loopback0 (IP: 10.255.128.14)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.15
@@ -198,7 +211,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc2-leaf2a_10.255.128.15'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc2-leaf2a
+        Loopback0 (IP: 10.255.128.15)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.16
@@ -206,7 +220,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc2-leaf2b_10.255.128.16'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc2-leaf2b
+        Loopback0 (IP: 10.255.128.16)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.17
@@ -214,7 +229,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc2-leaf3a.arista.com_10.255.128.17'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc2-leaf3a.arista.com
+        Loopback0 (IP: 10.255.128.17)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.18
@@ -222,7 +238,8 @@ anta.tests.connectivity:
       source: 10.255.128.16
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.16 - Destination: dc2-leaf3b.arista.com_10.255.128.18'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.16) - Destination: dc2-leaf3b.arista.com
+        Loopback0 (IP: 10.255.128.18)'
 anta.tests.field_notices:
 - VerifyFieldNotice44Resolution: null
 - VerifyFieldNotice72Resolution: null
@@ -443,14 +460,14 @@ anta.tests.routing.bgp:
       peers:
       - 10.255.128.11
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc2-spine1_10.255.128.11'
+      custom_field: 'BGP EVPN Peer: dc2-spine1 (IP: 10.255.128.11)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.12
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc2-spine2_10.255.128.12'
+      custom_field: 'BGP EVPN Peer: dc2-spine2 (IP: 10.255.128.12)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -458,7 +475,7 @@ anta.tests.routing.bgp:
       - 10.255.129.120
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf2a_10.255.129.120'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf2a (IP: 10.255.129.120)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -466,7 +483,7 @@ anta.tests.routing.bgp:
       - 10.255.255.116
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-spine1_10.255.255.116'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-spine1 (IP: 10.255.255.116)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -474,7 +491,7 @@ anta.tests.routing.bgp:
       - 10.255.255.118
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-spine2_10.255.255.118'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-spine2 (IP: 10.255.255.118)'
 anta.tests.routing.generic:
 - VerifyRoutingProtocolModel:
     model: multi-agent
