--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf3b.arista.com-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf3b.arista.com-catalog.yml
@@ -58,28 +58,28 @@ anta.tests.connectivity:
       neighbor_port: Ethernet3
       port: Ethernet3
     result_overwrite:
-      custom_field: 'Local: Ethernet3 - Remote: dc2-leaf3a.arista.com_Ethernet3'
+      custom_field: 'Local: Ethernet3 - Remote: dc2-leaf3a.arista.com Ethernet3'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf3a.arista.com
       neighbor_port: Ethernet4
       port: Ethernet4
     result_overwrite:
-      custom_field: 'Local: Ethernet4 - Remote: dc2-leaf3a.arista.com_Ethernet4'
+      custom_field: 'Local: Ethernet4 - Remote: dc2-leaf3a.arista.com Ethernet4'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-spine1
       neighbor_port: Ethernet6
       port: Ethernet1
     result_overwrite:
-      custom_field: 'Local: Ethernet1 - Remote: dc2-spine1_Ethernet6'
+      custom_field: 'Local: Ethernet1 - Remote: dc2-spine1 Ethernet6'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-spine2
       neighbor_port: Ethernet6
       port: Ethernet2
     result_overwrite:
-      custom_field: 'Local: Ethernet2 - Remote: dc2-spine2_Ethernet6'
+      custom_field: 'Local: Ethernet2 - Remote: dc2-spine2 Ethernet6'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.124
@@ -87,7 +87,8 @@ anta.tests.connectivity:
       source: 10.255.255.125
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet1 - Destination: dc2-spine1_Ethernet6'
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.125) - Destination:
+        dc2-spine1 Ethernet6 (IP: 10.255.255.124)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.126
@@ -95,7 +96,8 @@ anta.tests.connectivity:
       source: 10.255.255.127
       vrf: default
     result_overwrite:
-      custom_field: 'Source: P2P Interface Ethernet2 - Destination: dc2-spine2_Ethernet6'
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.127) - Destination:
+        dc2-spine2 Ethernet6 (IP: 10.255.255.126)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.1
@@ -103,7 +105,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc1-spine1_10.255.0.1'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc1-spine1
+        Loopback0 (IP: 10.255.0.1)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.2
@@ -111,7 +114,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc1-spine2_10.255.0.2'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc1-spine2
+        Loopback0 (IP: 10.255.0.2)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.3
@@ -119,7 +123,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc1-leaf1a_10.255.0.3'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc1-leaf1a
+        Loopback0 (IP: 10.255.0.3)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.4
@@ -127,7 +132,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc1-leaf1b_10.255.0.4'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc1-leaf1b
+        Loopback0 (IP: 10.255.0.4)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.5
@@ -135,7 +141,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc1-leaf2a_10.255.0.5'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc1-leaf2a
+        Loopback0 (IP: 10.255.0.5)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.2.1
@@ -143,7 +150,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc1-wan1_10.255.2.1'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc1-wan1
+        Loopback0 (IP: 10.255.2.1)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.2.2
@@ -151,7 +159,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc1-wan2_10.255.2.2'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc1-wan2
+        Loopback0 (IP: 10.255.2.2)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.11
@@ -159,7 +168,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-spine1_10.255.128.11'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc2-spine1
+        Loopback0 (IP: 10.255.128.11)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.12
@@ -167,7 +177,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-spine2_10.255.128.12'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc2-spine2
+        Loopback0 (IP: 10.255.128.12)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.13
@@ -175,7 +186,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-leaf1a_10.255.128.13'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc2-leaf1a
+        Loopback0 (IP: 10.255.128.13)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.14
@@ -183,7 +195,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-leaf1b_10.255.128.14'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc2-leaf1b
+        Loopback0 (IP: 10.255.128.14)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.15
@@ -191,7 +204,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-leaf2a_10.255.128.15'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc2-leaf2a
+        Loopback0 (IP: 10.255.128.15)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.16
@@ -199,7 +213,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-leaf2b_10.255.128.16'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc2-leaf2b
+        Loopback0 (IP: 10.255.128.16)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.17
@@ -207,7 +222,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-leaf3a.arista.com_10.255.128.17'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc2-leaf3a.arista.com
+        Loopback0 (IP: 10.255.128.17)'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.18
@@ -215,7 +231,8 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-leaf3b.arista.com_10.255.128.18'
+      custom_field: 'Source: Loopback0 (IP: 10.255.128.18) - Destination: dc2-leaf3b.arista.com
+        Loopback0 (IP: 10.255.128.18)'
 anta.tests.field_notices:
 - VerifyFieldNotice44Resolution: null
 - VerifyFieldNotice72Resolution: null
@@ -420,14 +437,14 @@ anta.tests.routing.bgp:
       peers:
       - 10.255.128.11
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc2-spine1_10.255.128.11'
+      custom_field: 'BGP EVPN Peer: dc2-spine1 (IP: 10.255.128.11)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.12
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: dc2-spine2_10.255.128.12'
+      custom_field: 'BGP EVPN Peer: dc2-spine2 (IP: 10.255.128.12)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -435,7 +452,7 @@ anta.tests.routing.bgp:
       - 10.255.129.124
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf3a.arista.com_10.255.129.124'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf3a.arista.com (IP: 10.255.129.124)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -443,7 +460,7 @@ anta.tests.routing.bgp:
       - 10.255.255.124
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-spine1_10.255.255.124'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-spine1 (IP: 10.255.255.124)'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -451,7 +468,7 @@ anta.tests.routing.bgp:
       - 10.255.255.126
       safi: unicast
     result_overwrite:
-      custom_field: 'BGP IPv4 Unicast Peer: dc2-spine2_10.255.255.126'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-spine2 (IP: 10.255.255.126)'
 anta.tests.routing.generic:
 - VerifyRoutingProtocolModel:
     model: multi-agent
